--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
 <script>
 const locations = [
   { name: "Madrid, Spain", lat: 40.4168, lon: -3.7038, dates: ["2025-11-23","2025-11-24","2025-11-25","2025-11-26"] },
-  { name: "Barcelona, Spain", lat: 41.3874, lon: 2.1686, dates: ["2025-11-27","2025-12-09"] },
+  { name: "Segovia, Spain", lat: 40.9481, lon: -4.1184, dates: ["2025-11-25"] },
+  { name: "Barcelona, Spain", lat: 41.3874, lon: 2.1686, dates: ["2025-11-27"] },
   { name: "Gibraltar", lat: 36.1408, lon: -5.3536, dates: ["2025-11-29"] },
   { name: "Lanzarote, Canary Islands", lat: 29.0469, lon: -13.5899, dates: ["2025-12-01"] },
   { name: "Tenerife, Canary Islands", lat: 28.2916, lon: -16.6291, dates: ["2025-12-02"] },
@@ -37,6 +38,7 @@ const locations = [
   { name: "Casablanca, Morocco", lat: 33.5731, lon: -7.5898, dates: ["2025-12-05"] },
   { name: "Tangier, Morocco", lat: 35.7595, lon: -5.8340, dates: ["2025-12-06"] },
   { name: "Malaga, Spain", lat: 36.7213, lon: -4.4214, dates: ["2025-12-07"] },
+  { name: "Barcelona, Spain", lat: 41.3874, lon: 2.1686, dates: ["2025-12-09"] },
 ];
 
 async function fetchWeather(lat, lon) {
@@ -80,6 +82,7 @@ function describeWeather(code) {
         // fallback averages
         const fallback = {
           "Madrid, Spain": [58,42,20,"Partly cloudy"],
+          "Segovia, Spain": [55,39,25,"Partly cloudy"],
           "Barcelona, Spain": [61,47,25,"Partly cloudy"],
           "Gibraltar":[64,55,20,"Partly cloudy"],
           "Lanzarote, Canary Islands":[73,63,10,"Sunny"],
