--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </style>
 </head>
 <body>
-<h1>Weather Forecast: Spain, Canary Islands & Morocco</h1>
+<h1>Weather Forecast: Europe 2025</h1>
 <div class="loading" id="loading">Loading latest forecasts...</div>
 <table id="weatherTable" style="display:none;">
   <thead>
